[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Character/projectiles spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/FireBall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 5 )

[node name="FireBall" type="Area2D"]
position = Vector2( 50, 36 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 159.618, 124.843, 166.907, 231.815 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_FireBall_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
